UPDATE : resume.HTML, CSS

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8">
@@ -7,68 +7,59 @@
     <title>InahChoi Resume</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <link rel="shortcut icon" href="imgaes/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="imgaes/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
-    <header>
-        <h1><a href="#scroll_intro" class="intro_a">
-                InahChoi Resume<img src="imgaes/header_name_logo.jpg" style="width:55px; vertical-align:bottom;"
-                    alt="namelogo"></a>
-        </h1>
-        <ul class="nav">
-            <li><a href="#scroll_profile">profile</a></li>
-            <li><a href="#scroll_contact">contact</a></li>
-        </ul>
-    </header>
+    <header></header>
 
-    <div id="scroll_intro">
+    <section>
         <span></span>
-        <h2>안녕하세요<br /> 저는 최인아입니다.</h2>
+        <h1>안녕하세요<br /> 저는 최인아입니다.</h1>
         <div>
-            <p>웹 디자인 일을 하며 웹 개발을 알아보던 중<br /> 개발자 지인의 추천을 받아</p>
-            <p>자연스레 위코드를 알게 되었습니다 부족한 부분이 많겠지만,</p>
-            <p>여러분과 함께 성장하며, 많이 배워가고 싶습니다!</p>
-    </div>
-
-    <div id="scroll_profile">
-        <span></span>
-        <div class="profile_table">
-            <h3>소개</h3>
-            <table>
-                <tr>
-                    <td>이름</td>
-                    <td>최인아</td>
-                </tr>
-                <tr>
-                    <td>생년월일</td>
-                    <td>1997.02.07</td>
-                </tr>
-                <tr>
-                    <td>거주지</td>
-                    <td>선릉</td>
-                </tr>
-                <tr>
-                    <td>개발Lv</td>
-                    <td>2021.01 - Lv.1</td>
-                </tr>
-            </table>
+            <p>2년차 웹 퍼블리셔로 일 하던 중 사내에 계시던
+                <br />백엔드 개발자님이 하시는 개발과 사랑에 빠져
+                <br />위코드를 알게 되었습니다.
+            </p>
+            <p>파이썬을 좋아하고, Go언어와 JavaScript에 관심이 있습니다.
+                <br />회사와 팀에 도움이 되는 일을 좋아하며, 개발자들의 협업 문화를 사랑합니다.
+                <br />제가 하는 개발이 사용자로 하여금
+                <br />조금이라도 편의를 주는 것에 희열을 느낍니다.
+            </p>
         </div>
 
-    </div>
+        <section>
+            <h2>Skils</h2>
+            <p>프로젝트 혹은 사용했던 기술들입니다.</p>
+            <article>
+                <p>Main Stack</p>
+                <img src="./images/python.png" alt="Python">
+                <img src="" alt="Django">
+            </article>
+            <article>
+                <p>Sub Stack</p>
+                <img src="" alt="HTML5">
+                <img src="" alt="CSS3">
+            </article>
+            <article>
+                <p>Devops</p>
+                <img src="" alt="MySQL">
+                <img src="" alt="AWS">
+                <img src="" alt="RDS">
+            </article>
+        </section>
 
-    <div id="scroll_contact">
-        <span></span>
-        <div>
-            <h3>CONTACT</h3>
-            <p>위코드를 진행하며<br /> 제가 도움이 될 수 있을지는 모르겠지만<br /> 아는 선이 아닌 같이 알아가며 성장하고 싶습니다.<br /> 제 코드의 문제점 짚어주시면 감사히
-                받아들이겠습니다!</p>
-            <a href="https://github.com/InahChoi" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://velog.io/@inah-_-" title="velog 구경가기" target="_blank"><i class="fab fa-vimeo"></i></a>
-            <a href="mailto:hyejooworld@gmail.com" title="메일 보내기" target="_blank"><i class="fas fa-paper-plane"></i></a>
+        <div id="scroll_contact">
+            <span></span>
+            <div>
+                <h3>CONTACT</h3>
+                <p>위코드를 진행하며<br /> 제가 도움이 될 수 있을지는 모르겠지만<br /> 아는 선이 아닌 같이 알아가며 성장하고 싶습니다.<br /> 제 코드의 문제점 짚어주시면 감사히
+                    받아들이겠습니다!</p>
+                <a href="https://github.com/InahChoi" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://velog.io/@inah-_-" title="velog 구경가기" target="_blank"><i class="fab fa-vimeo"></i></a>
+                <a href="mailto:hyejooworld@gmail.com" title="메일 보내기" target="_blank"><i
+                        class="fas fa-paper-plane"></i></a>
+            </div>
         </div>
-    </div>
 </body>
 
 </html>
