--- a/index.html
+++ b/index.html
@@ -10,56 +10,94 @@
 </head>
 
 <body>
-    <header></header>
-
-    <section>
-        <span></span>
-        <h1>안녕하세요<br /> 저는 최인아입니다.</h1>
+    <header>
+        <h1>CONTACT</h1>
+        <p>010.9402.6454</p>
         <div>
-            <p>2년차 웹 퍼블리셔로 일 하던 중 사내에 계시던
-                <br />백엔드 개발자님이 하시는 개발과 사랑에 빠져
-                <br />위코드를 알게 되었습니다.
-            </p>
-            <p>파이썬을 좋아하고, Go언어와 JavaScript에 관심이 있습니다.
-                <br />회사와 팀에 도움이 되는 일을 좋아하며, 개발자들의 협업 문화를 사랑합니다.
-                <br />제가 하는 개발이 사용자로 하여금
-                <br />조금이라도 편의를 주는 것에 희열을 느낍니다.
-            </p>
+            <a href="https://github.com/InahChoi" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://velog.io/@inah-_-" title="velog 구경가기" target="_blank"><i class="fab fa-vimeo"></i></a>
+            <a href="mailto:hyejooworld@gmail.com" title="메일 보내기" target="_blank"><i class="fas fa-paper-plane"></i></a>
         </div>
-
+    </header>
+    <div class="container">
         <section>
-            <h2>Skils</h2>
-            <p>프로젝트 혹은 사용했던 기술들입니다.</p>
-            <article>
-                <p>Main Stack</p>
-                <img src="./images/python.png" alt="Python">
-                <img src="" alt="Django">
-            </article>
-            <article>
-                <p>Sub Stack</p>
-                <img src="" alt="HTML5">
-                <img src="" alt="CSS3">
-            </article>
-            <article>
-                <p>Devops</p>
-                <img src="" alt="MySQL">
-                <img src="" alt="AWS">
-                <img src="" alt="RDS">
-            </article>
+            <h1>안녕하세요<br /> 저는 최인아입니다 <i class="fas fa-circle"></i></h1>
+            <div class="paragraph">
+                <p>2년차 웹 퍼블리셔로 일 하던 중 사내에 계시던
+                    백엔드 개발자님이 하시는 개발과 사랑에 빠져
+                    위코드를 알게 되었습니다.
+                </p>
+                <p>파이썬을 좋아하고, Go언어와 JavaScript에 관심이 있습니다.
+                    회사와 팀에 도움이 되는 일을 좋아하며, 개발자들의 협업 문화를 사랑합니다.
+                    제가 하는 개발이 사용자로 하여금
+                    조금이라도 편의를 주는 것에 희열을 느낍니다.
+                </p>
+            </div>
         </section>
 
-        <div id="scroll_contact">
-            <span></span>
-            <div>
-                <h3>CONTACT</h3>
-                <p>위코드를 진행하며<br /> 제가 도움이 될 수 있을지는 모르겠지만<br /> 아는 선이 아닌 같이 알아가며 성장하고 싶습니다.<br /> 제 코드의 문제점 짚어주시면 감사히
-                    받아들이겠습니다!</p>
-                <a href="https://github.com/InahChoi" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://velog.io/@inah-_-" title="velog 구경가기" target="_blank"><i class="fab fa-vimeo"></i></a>
-                <a href="mailto:hyejooworld@gmail.com" title="메일 보내기" target="_blank"><i
-                        class="fas fa-paper-plane"></i></a>
+        <section>
+            <h2>Skils <i class="fas fa-circle"></i></h2>
+            <p>프로젝트 혹은 사용했던 기술들입니다.</p>
+            <div class="flex_container">
+                <article>
+                    <p>Main Stack</p>
+                    <img src="imgaes/python.png" alt="Python">
+                    <img src="imgaes/django.png" alt="Django">
+                </article>
+
+                <article>
+                    <p>Sub Stack</p>
+                    <img src="imgaes/html5.png" alt="HTML5">
+                    <img src="imgaes/css3.png" alt="CSS3">
+                </article>
+
+                <article>
+                    <p>Devops</p>
+                    <img src="imgaes/mysql.png" alt="MySQL">
+                    <img src="imgaes/aws.png" alt="AWS">
+                </article>
             </div>
-        </div>
+        </section>
+
+        <section>
+            <h2>Clone Projects <i class="fas fa-circle"></i></h2>
+                <p>클론 프로젝트는 순수 개발시간의 비중을 높이기 위해 이미 서비스 중인 사이트의
+                기획이나 디자인을 클론하여 진행하는 것입니다.
+                진행한 프로젝트는 Clone Coding 프로젝트로, 로직이나 구현방법은 직접 코딩하였습니다.</p>
+            <article class="project_article">
+                <h3>Lush Project</h3>
+                <p>프로젝트 기간 2021.03.15 ~ 2021.03.26(2주)</p>
+                <h4>개발 상세</h4>
+                <ul>
+                    <h5><i class="fas fa-check-circle"></i> Product API 개발</h5>
+                    <li>Front에 보내줄 Product List 로직 구현</li>
+                    <li>상품 상세에 쓰이는 Product Detail 로직 구현</li>
+                </ul>
+
+                <ul>
+                    <h5><i class="fas fa-check-circle"></i> Data Excel Import/Export기능 개발</h5>
+                    <li>scv파일 생성하여 Python으로 MySQL에 데이터 추가</li>
+                </ul>
+            </article>
+
+            <article class="project_article">
+                <h3>WatCha Project</h3>
+                <p>프로젝트 기간 2021.03.29 ~ 2021.04.09(2주)</p>
+                <h4>개발 상세</h4>
+                <ul>
+                    <h5><i class="fas fa-check-circle"></i> User API 개발</h5>
+                    <li>정규식 적용하여 회원가입, 로그인 API 로직 구현</li>
+                    <li>jwt를 이용한 인증&인가 과정 구현</li>
+                </ul>
+            </article>
+
+        </section>
+
+        <section>
+            <h3>Work Experience <i class="fas fa-circle"></i></h3>
+            <p>[웹퍼블리셔] 구인터내셔널 / 온라인몰 지원부 / 2018.11 ~ 2021.01</p>
+        </section>
+    </div>
 </body>
 
 </html>
