UPDATE : resume.HTML, CSS ADD : images

--- a/index.html
+++ b/index.html
@@ -10,15 +10,6 @@
 </head>
 
 <body>
-    <header>
-        <h1>CONTACT</h1>
-        <p>010.9402.6454</p>
-        <div>
-            <a href="https://github.com/InahChoi" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://velog.io/@inah-_-" title="velog 구경가기" target="_blank"><i class="fab fa-vimeo"></i></a>
-            <a href="mailto:hyejooworld@gmail.com" title="메일 보내기" target="_blank"><i class="fas fa-paper-plane"></i></a>
-        </div>
-    </header>
     <div class="container">
         <section>
             <h1>안녕하세요<br /> 저는 최인아입니다 <i class="fas fa-circle"></i></h1>
@@ -96,6 +87,18 @@
         <section>
             <h3>Work Experience <i class="fas fa-circle"></i></h3>
             <p>[웹퍼블리셔] 구인터내셔널 / 온라인몰 지원부 / 2018.11 ~ 2021.01</p>
+        </section>
+
+        <section>
+            <article class="contact_article">
+                <h3>CONTACT <i class="fas fa-circle"></i></h3>
+                <p><span>PhoneNumber</span> 010.9402.6454</p>
+                <p><span>Email</span> hyejooworld@gmail.com </p>
+                <div class="contact_flex">
+                    <a href="https://github.com/InahChoi" target="_blank"><img src="imgaes/github2.png" alt="github"></a>
+                    <a href="https://velog.io/@inah-_-" title="velog 구경가기" target="_blank"><img src="imgaes/velog.jpeg" alt="velog"></a>
+                </div>
+            </article>
         </section>
     </div>
 </body>
