--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </section>
 
         <section>
-            <h2>Skils <i class="fas fa-circle"></i></h2>
+            <h2>Skills <i class="fas fa-circle"></i></h2>
             <p>프로젝트 혹은 사용했던 기술들입니다.</p>
             <div class="flex_container">
                 <article>
@@ -50,11 +50,30 @@
             </div>
         </section>
 
+        <section class="experience_section">
+            <h2>Work Experience <i class="fas fa-circle"></i></h2>
+            <p>[웹퍼블리셔] 구인터내셔널 / 온라인 지원부 / 2018.11 ~ 2021.01</p>
+            <p>자사 온라인몰 홈페이지 백엔드 개발자분과 함께 협업하며 유지보수</p>
+            <p>자사 온라인몰 홈페이지 디자인 및 퍼블리싱</p>
+        </section>
+
         <section>
             <h2>Clone Projects <i class="fas fa-circle"></i></h2>
                 <p>클론 프로젝트는 순수 개발시간의 비중을 높이기 위해 이미 서비스 중인 사이트의
                 기획이나 디자인을 클론하여 진행하는 것입니다.
                 진행한 프로젝트는 Clone Coding 프로젝트로, 로직이나 구현방법은 직접 코딩하였습니다.</p>
+
+            <article class="project_article">
+                <h3>WatCha Project</h3>
+                <p>프로젝트 기간 2021.03.29 ~ 2021.04.09(2주)</p>
+                <h4>개발 상세</h4>
+                <ul>
+                    <h5><i class="fas fa-check-circle"></i> User API 개발</h5>
+                    <li>정규식 적용하여 회원가입, 로그인 API 로직 구현</li>
+                    <li>jwt를 이용한 인증&인가 과정 구현</li>
+                </ul>
+            </article>
+
             <article class="project_article">
                 <h3>Lush Project</h3>
                 <p>프로젝트 기간 2021.03.15 ~ 2021.03.26(2주)</p>
@@ -70,23 +89,6 @@
                     <li>scv파일 생성하여 Python으로 MySQL에 데이터 추가</li>
                 </ul>
             </article>
-
-            <article class="project_article">
-                <h3>WatCha Project</h3>
-                <p>프로젝트 기간 2021.03.29 ~ 2021.04.09(2주)</p>
-                <h4>개발 상세</h4>
-                <ul>
-                    <h5><i class="fas fa-check-circle"></i> User API 개발</h5>
-                    <li>정규식 적용하여 회원가입, 로그인 API 로직 구현</li>
-                    <li>jwt를 이용한 인증&인가 과정 구현</li>
-                </ul>
-            </article>
-
-        </section>
-
-        <section>
-            <h3>Work Experience <i class="fas fa-circle"></i></h3>
-            <p>[웹퍼블리셔] 구인터내셔널 / 온라인몰 지원부 / 2018.11 ~ 2021.01</p>
         </section>
 
         <section>
