--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
         </section>
 
         <section>
-            <h2>Clone Projects <i class="fas fa-circle"></i></h2>
-                <p>클론 프로젝트는 순수 개발시간의 비중을 높이기 위해 이미 서비스 중인 사이트의
-                기획이나 디자인을 클론하여 진행하는 것입니다.
+            <h2>Projects <i class="fas fa-circle"></i></h2>
+                <p>프로젝트는 순수 개발시간의 비중을 높이기 위해 이미 서비스 중인 사이트의
+                기획이나 디자인을 클론하여 진행하였습니다.
                 Scrum의 진행과정을 이해하며 진행한 프로젝트들로,
-                로직이나 구현방법을 직접 코딩하였습니다.</p>
+                로직과 구현은 직접 코딩했습니다.</p>
                 <p>진행했던 프로젝트들은 프로젝트 서비스 사용자 모집하여 추려진 피드백을 토대로 리팩토링을
                 진행하기로 하였습니다.</p>
 
