--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
                     <li>jwt를 이용한 인증&인가 과정 구현</li>
                     <li>영화에 대한 리뷰와 리뷰에 대한 좋아요 기능 구현</li>
                     <li>사용자가 리뷰를 작성할 때 사용자를 확인하는 데코레이터 기능 구현</li>
+                    <li>Kakao 공식 문서를 참고하여 API 로직 구현</li>
+                    <li>User App 관련 UnitTest 완료</li>
                 </ul>
             </article>
 
