--- a/index.html
+++ b/index.html
@@ -12,65 +12,61 @@
 <body>
     <div class="container">
         <section>
-            <h1>안녕하세요<br /> 저는 최인아입니다 <i class="fas fa-circle"></i></h1>
+            <h1>안녕하세요<br /> 저는 최인아입니다</h1>
             <div class="paragraph">
-                <p>2년차 웹 퍼블리셔로 일 하던 중 사내에 계시던
-                    백엔드 개발자님이 하시는 개발과 사랑에 빠져
-                    위코드를 알게 되었습니다.
+                <p>스타트업 기업에서 웹 퍼블리셔로 일하던 도중
+                개발자로서의 업무를 권유받았습니다. <br/>
+                그 후 점차 개발의 매력을 알게 되었고 위코드를 희망하게 되어 개발자로서 시작하게 되었습니다.
                 </p>
-                <p>파이썬의 파이써닉한 문법을 좋아하고
-                    회사와 팀에 도움이 되는 일을 좋아하며, 개발자들의 협업 문화를 사랑합니다.
-                    제가 하는 개발이 사용자로 하여금
-                    조금이라도 편의를 주는 것에 희열을 느낍니다.
+                <p>개발자들의 협업 문화를 사랑합니다.<br/>
+                    팀원과 함께 프로젝트를 성장시키고 배포하는 것에 희열을 느끼며,
+                    배포 된 프로젝트가 비지니스 서비스로 이어지는 것에 감동합니다.
                 </p>
             </div>
         </section>
 
         <section>
-            <h2>Skills <i class="fas fa-circle"></i></h2>
+            <h2>Skills</h2>
             <p>프로젝트 혹은 사용했던 기술들입니다.</p>
             <div class="flex_container">
                 <article class="skill_article">
-                    <p>Main Stack</p>
+                    <h5>Main Stack</h5>
                     <img src="images/python.png" alt="Python">
                     <img src="images/django.png" alt="Django">
+                    <img src="images/mysql.png" alt="MySQL">
                     <p>파이썬의 자료형과 조건문, 루프 등을 이해하고 프로젝트에 적용할 수 있습니다.</p>
                     <p>장고의 MTV패턴을 이해하고 실제 프로젝트를 진행할 수 있습니다.</p>
+                    <p>MySQL의 쿼리문을 이해하고 적용할 수 있습니다.</p>
                 </article>
 
                 <article class="skill_article">
-                    <p>Sub Stack</p>
+                    <h5>Sub Stack</h5>
                     <img src="images/html5.png" alt="HTML5">
                     <img src="images/css3.png" alt="CSS3">
                     <p>웹 퍼블리셔일 때에 사용했던 기술입니다.</p>                    
                 </article>
 
                 <article class="skill_article">
-                    <p>Devops</p>
-                    <img src="images/mysql.png" alt="MySQL">
+                    <h5>Devops</h5>
                     <img src="images/aws.png" alt="AWS">
-                    <p>MySQL의 쿼리문을 이해하고 적용할 수 있습니다.</p>
-                    <p>aws의 EC2, RDS를 통해 프로젝트를 배포한 경험이 있습니다.</p>
-                </article>
-            </div>
-            <div class="flex_container border">
-                <article class="skill_article">
-                    <p>협업 Tools</p>
                     <img src="images/slack.png" alt="Slack">
                     <img src="images/trello.png" alt="Trello">
                     <img src="images/notion.png" alt="Notion">
+                    <p>AWS의 EC2, RDS를 통해 프로젝트를 배포한 경험이 있습니다.</p>
                 </article>
+
+            </div>
         </section>
 
         <section class="experience_section">
-            <h2>Work Experience <i class="fas fa-circle"></i></h2>
+            <h2>Work Experience</h2>
             <p>[웹퍼블리셔] 구인터내셔널 / 온라인 지원부 / 2018.11 ~ 2021.01</p>
-            <p>자사 온라인몰 홈페이지 백엔드 개발자분과 함께 협업하며 유지보수</p>
-            <p>자사 온라인몰 홈페이지 디자인 및 퍼블리싱</p>
+            <p><i class="fas fa-circle"></i>자사 온라인몰 홈페이지 외주 개발자, 기획자분들과 함께 협업하며 유지보수</p>
+            <p><i class="fas fa-circle"></i>자사 온라인몰 홈페이지 디자인 및 퍼블리싱</p>
         </section>
 
         <section>
-            <h2>Projects <i class="fas fa-circle"></i></h2>
+            <h2>Projects</h2>
                 <p>프로젝트는 순수 개발시간의 비중을 높이기 위해 이미 서비스 중인 사이트의
                 기획이나 디자인을 클론하여 진행하였습니다.
                 Scrum의 진행과정을 이해하며 진행한 프로젝트들로,
@@ -79,18 +75,41 @@
                 진행하기로 하였습니다.</p>
 
             <article class="project_article">
+                <h3>기업협업 [Dneuro]</h3>
+                <p>AI 자산관리 로보어드바이저 서비스를 하는 핀테크 기업으로,
+                기존 서비스 로직에서 고객 프로파일링 및 포트폴리오 API를 수정하고
+                유저별 포트폴리오 리스트를 보여주는 로직을 추가하였습니다.</p>
+                <p>프로젝트 기간 2021.04.12 ~ 2021.05.06</p>
+                <h4>개발 상세</h4>
+                <ul>
+                    <h5>API 개발</h5>
+                    <li><i class="fas fa-circle"></i>[1주차] 프로젝트와 로보어드바이저 서비스 이해 및 분석, 개발환경 세팅</li>
+                    <li><i class="fas fa-circle"></i>[2주차] 기존 서비스 로직 분석 및 수정 요청사항 분석</li>
+                    <li><i class="fas fa-circle"></i>[3주차] 추가 로직에 필요한 데이터베이스 추가 및 수정, 로보어드바이저 API 데이터 DB저장 로직 작성</li>
+                    <li><i class="fas fa-circle"></i>[4주차] 유저별 포트폴리오 리스트 구현, 프로파일링 항목 추가, AWS lambda를 통한 스케쥴러 작성</li>
+                </ul>
+
+                <ul>
+                    <h5>What did I do</h5>
+                    <li><i class="fas fa-circle"></i>비전공자와의 협업</li>
+                    <li><i class="fas fa-circle"></i>포트폴리오 리스트 로직 구현</li>
+                    <li><i class="fas fa-circle"></i>프로파일링 API 수정</li>
+                </ul>
+            </article>
+
+            <article class="project_article">
                 <h3>WatCha Project</h3>
                 <p>프로젝트 기간 2021.03.29 ~ 2021.04.09(2주)</p>
                 <h4>개발 상세</h4>
                 <ul>
-                    <h5><i class="fas fa-check-circle"></i> User API 개발</h5>
-                    <li>정규식 적용하여 회원가입, 로그인 API 로직 구현</li>
-                    <li>회원가입 시 bcrypt로 암호화하여 database에 저장</li>
-                    <li>jwt를 이용한 인증&인가 과정 구현</li>
-                    <li>영화에 대한 리뷰와 리뷰에 대한 좋아요 기능 구현</li>
-                    <li>사용자가 리뷰를 작성할 때 사용자를 확인하는 데코레이터 기능 구현</li>
-                    <li>Kakao 공식 문서를 참고하여 API 로직 구현</li>
-                    <li>User App 관련 UnitTest 완료</li>
+                    <h5>User API 개발</h5>
+                    <li><i class="fas fa-circle"></i>정규식 적용하여 회원가입, 로그인 API 로직 구현</li>
+                    <li><i class="fas fa-circle"></i>회원가입 시 bcrypt로 암호화하여 database에 저장</li>
+                    <li><i class="fas fa-circle"></i>jwt를 이용한 인증&인가 과정 구현</li>
+                    <li><i class="fas fa-circle"></i>영화에 대한 리뷰와 리뷰에 대한 좋아요 기능 구현</li>
+                    <li><i class="fas fa-circle"></i>사용자가 리뷰를 작성할 때 사용자를 확인하는 데코레이터 기능 구현</li>
+                    <li><i class="fas fa-circle"></i>Kakao 공식 문서를 참고하여 로그인 API 로직 구현</li>
+                    <li><i class="fas fa-circle"></i>User App 관련 UnitTest 완료</li>
                 </ul>
             </article>
 
@@ -99,23 +118,23 @@
                 <p>프로젝트 기간 2021.03.15 ~ 2021.03.26(2주)</p>
                 <h4>개발 상세</h4>
                 <ul>
-                    <h5><i class="fas fa-check-circle"></i> Product API 개발</h5>
-                    <li>Product 조건별 필터링하여 데이터 전달</li>
-                    <li>필요한 Product의 요소별로 Product List 로직 구현</li>
-                    <li>코드 리뷰를 받고 List comprehension으로 코드 리팩토링</li>
-                    <li>상품 상세에 쓰이는 Product Detail 로직을 Path parameter로 RESTful하게 구현</li>
+                    <h5></i> Product API 개발</h5>
+                    <li><i class="fas fa-circle"></i>Product 조건별 필터링하여 데이터 전달</li>
+                    <li><i class="fas fa-circle"></i>필요한 Product의 요소별로 Product List 로직 구현</li>
+                    <li><i class="fas fa-circle"></i>코드 리뷰를 받고 List comprehension으로 코드 리팩토링</li>
+                    <li><i class="fas fa-circle"></i>상품 상세에 쓰이는 Product Detail 로직을 Path parameter로 RESTful하게 구현</li>
                 </ul>
 
                 <ul>
-                    <h5><i class="fas fa-check-circle"></i> Data Excel Import/Export기능 개발</h5>
-                    <li>csv파일 생성하여 Python으로 MySQL에 데이터 추가</li>
+                    <h5>Data Excel Import/Export기능 개발</h5>
+                    <li><i class="fas fa-circle"></i>csv파일 생성하여 Python으로 MySQL에 데이터 추가</li>
                 </ul>
             </article>
         </section>
 
         <section>
             <article class="contact_article">
-                <h3>CONTACT <i class="fas fa-circle"></i></h3>
+                <h3>CONTACT</h3>
                 <p><span>PhoneNumber</span> 010.9402.6454</p>
                 <p><span>Email</span> hyejooworld@gmail.com </p>
                 <div class="contact_flex">
