MODIFY : index.html > email update

--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
             <div class="flex_container">
                 <article class="skill_article">
                     <h5>Main Stack</h5>
-                    <img src="images/python.png" alt="Python">
-                    <img src="images/django.png" alt="Django">
-                    <img src="images/mysql.png" alt="MySQL">
+                    <div class="skill_img_div">
+                        <img src="images/python.png" alt="Python">
+                        <img src="images/django.png" alt="Django">
+                        <img src="images/mysql.png" alt="MySQL">
+                    </div>
                     <p>파이썬의 자료형과 조건문, 루프 등을 이해하고 프로젝트에 적용할 수 있습니다.</p>
                     <p>장고의 MTV패턴을 이해하고 실제 프로젝트를 진행할 수 있습니다.</p>
                     <p>MySQL의 쿼리문을 이해하고 적용할 수 있습니다.</p>
@@ -41,17 +43,21 @@
 
                 <article class="skill_article">
                     <h5>Sub Stack</h5>
-                    <img src="images/html5.png" alt="HTML5">
-                    <img src="images/css3.png" alt="CSS3">
+                    <div class="skill_img_div">
+                        <img src="images/html5.png" alt="HTML5">
+                        <img src="images/css3.png" alt="CSS3">
+                    </div>
                     <p>웹 퍼블리셔일 때에 사용했던 기술입니다.</p>                    
                 </article>
 
                 <article class="skill_article">
                     <h5>Devops</h5>
-                    <img src="images/aws.png" alt="AWS">
-                    <img src="images/slack.png" alt="Slack">
-                    <img src="images/trello.png" alt="Trello">
-                    <img src="images/notion.png" alt="Notion">
+                    <div class="skill_img_div">
+                        <img src="images/aws.png" alt="AWS">
+                        <img src="images/slack.png" alt="Slack">
+                        <img src="images/trello.png" alt="Trello">
+                        <img src="images/notion.png" alt="Notion">
+                    </div>
                     <p>AWS의 EC2, RDS를 통해 프로젝트를 배포한 경험이 있습니다.</p>
                 </article>
 
@@ -136,7 +142,7 @@
             <article class="contact_article">
                 <h3>CONTACT</h3>
                 <p><span>PhoneNumber</span> 010.9402.6454</p>
-                <p><span>Email</span> hyejooworld@gmail.com </p>
+                <p><span>Email</span> choiinah@kakao.com</p>
                 <div class="contact_flex">
                     <a href="https://github.com/InahChoi" target="_blank"><img src="images/github2.png" alt="github"></a>
                     <a href="https://velog.io/@inah-_-" title="velog 구경가기" target="_blank"><img src="images/velog.jpeg" alt="velog"></a>
