--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
         <section>
             <h1>안녕하세요<br /> 저는 최인아입니다</h1>
             <div class="paragraph">
-                <p>스타트업 기업에서 웹 퍼블리셔로 일하던 도중
-                개발자로서의 업무를 권유받았습니다. <br/>
-                그 후 점차 개발의 매력을 알게 되었고 위코드를 희망하게 되어 개발자로서 시작하게 되었습니다.
+                <p>저는 웹 퍼블리셔로 근무한 2년의 기간 동안 자연스럽게 개발 직군을 접하였습니다. <br/>
+                그로스해킹을 공부하던 도중 사용자에게 다가가는 방법이 퍼블리셔와 백엔드 개발자가 다른 느낌이 들었고,
+                사용자가 요청하는 데이터를 불러오고 처리하는
+                그 과정이 너무 매력적으로 다가오게 되어 위코드에서의 배움을 희망하게 되었습니다.
                 </p>
-                <p>개발자들의 협업 문화를 사랑합니다.<br/>
+                <p>저는 개발자들의 협업 문화를 사랑합니다. 또한 재미를 느낍니다.<br/>
                     팀원과 함께 프로젝트를 성장시키고 배포하는 것에 희열을 느끼며,
                     배포 된 프로젝트가 비지니스 서비스로 이어지는 것에 감동합니다.
                 </p>
@@ -89,10 +90,10 @@
                 <h4>개발 상세</h4>
                 <ul>
                     <h5>API 개발</h5>
-                    <li><i class="fas fa-circle"></i>[1주차] 프로젝트와 로보어드바이저 서비스 이해 및 분석, 개발환경 세팅</li>
-                    <li><i class="fas fa-circle"></i>[2주차] 기존 서비스 로직 분석 및 수정 요청사항 분석</li>
-                    <li><i class="fas fa-circle"></i>[3주차] 추가 로직에 필요한 데이터베이스 추가 및 수정, 로보어드바이저 API 데이터 DB저장 로직 작성</li>
-                    <li><i class="fas fa-circle"></i>[4주차] 유저별 포트폴리오 리스트 구현, 프로파일링 항목 추가, AWS lambda를 통한 스케쥴러 작성</li>
+                    <li><i class="fas fa-circle"></i>프로젝트와 로보어드바이저 서비스 이해 및 분석, 개발환경 세팅</li>
+                    <li><i class="fas fa-circle"></i>기존 서비스 로직 분석 및 수정 요청사항 분석</li>
+                    <li><i class="fas fa-circle"></i>추가 로직에 필요한 데이터베이스 추가 및 수정, 로보어드바이저 API 데이터 DB저장 로직 작성</li>
+                    <li><i class="fas fa-circle"></i>유저별 포트폴리오 리스트 구현, 프로파일링 항목 추가, AWS lambda를 통한 스케쥴러 작성</li>
                 </ul>
 
                 <ul>
