--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <section>
             <h1>안녕하세요<br /> 저는 최인아입니다</h1>
             <div class="paragraph">
-                <p>저는 웹 퍼블리셔로 근무한 2년의 기간 동안 자연스럽게 개발 직군을 접하였습니다. <br/>
-                그로스해킹을 공부하던 도중 사용자에게 다가가는 방법이 퍼블리셔와 백엔드 개발자가 다른 느낌이 들었고,
+                <p>웹 퍼블리셔로 근무한 2년의 기간 동안 자연스럽게 개발 직군을 접하였습니다. <br/>
+                그로스 해킹을 공부하던 도중 사용자에게 다가가는 방법이 퍼블리셔와 백엔드 개발자가 다른 느낌이 들었고,
                 사용자가 요청하는 데이터를 불러오고 처리하는
                 그 과정이 너무 매력적으로 다가오게 되어 위코드에서의 배움을 희망하게 되었습니다.
                 </p>
                 <p>저는 개발자들의 협업 문화를 사랑합니다. 또한 재미를 느낍니다.<br/>
                     팀원과 함께 프로젝트를 성장시키고 배포하는 것에 희열을 느끼며,
-                    배포 된 프로젝트가 비지니스 서비스로 이어지는 것에 감동합니다.
+                    배포된 프로젝트가 비지니스 서비스로 이어지는 것에 감동합니다.
                 </p>
             </div>
         </section>
@@ -37,9 +37,11 @@
                         <img src="images/django.png" alt="Django">
                         <img src="images/mysql.png" alt="MySQL">
                     </div>
-                    <p>파이썬의 자료형과 조건문, 루프 등을 이해하고 프로젝트에 적용할 수 있습니다.</p>
-                    <p>장고의 MTV패턴을 이해하고 실제 프로젝트를 진행할 수 있습니다.</p>
-                    <p>MySQL의 쿼리문을 이해하고 적용할 수 있습니다.</p>
+                    <div class="skill_string_div">
+                        <p>파이썬의 자료형과 조건문, 루프 등을 이해하고 프로젝트에 적용할 수 있습니다.</p>
+                        <p>장고의 MTV패턴을 이해하고 실제 프로젝트를 진행할 수 있습니다.</p>
+                        <p>MySQL의 쿼리문을 이해하고 적용할 수 있습니다.</p>
+                    </div>
                 </article>
 
                 <article class="skill_article">
@@ -99,7 +101,7 @@
                 <ul>
                     <h5>What did I do</h5>
                     <li><i class="fas fa-circle"></i>비전공자와의 협업</li>
-                    <li><i class="fas fa-circle"></i>포트폴리오 리스트 로직 구현</li>
+                    <li><i class="fas fa-circle"></i>포트폴리오 리스트 API 개발</li>
                     <li><i class="fas fa-circle"></i>프로파일링 API 수정</li>
                 </ul>
             </article>
@@ -111,11 +113,11 @@
                 <ul>
                     <h5>User API 개발</h5>
                     <li><i class="fas fa-circle"></i>정규식 적용하여 회원가입, 로그인 API 로직 구현</li>
-                    <li><i class="fas fa-circle"></i>회원가입 시 bcrypt로 암호화하여 database에 저장</li>
-                    <li><i class="fas fa-circle"></i>jwt를 이용한 인증&인가 과정 구현</li>
-                    <li><i class="fas fa-circle"></i>영화에 대한 리뷰와 리뷰에 대한 좋아요 기능 구현</li>
-                    <li><i class="fas fa-circle"></i>사용자가 리뷰를 작성할 때 사용자를 확인하는 데코레이터 기능 구현</li>
+                    <li><i class="fas fa-circle"></i>회원가입 시 해싱 라이브러리 bcrypt.gensalt()로 암호화하여 database에 저장</li>
+                    <li><i class="fas fa-circle"></i>회원가입, 로그인(인증), JWT - Json Web Token(인가) 구현</li>
+                    <li><i class="fas fa-circle"></i>사용자가 활동할 때 사용자를 확인(JWT)하는 데코레이터 기능 구현</li>
                     <li><i class="fas fa-circle"></i>Kakao 공식 문서를 참고하여 로그인 API 로직 구현</li>
+                    <li><i class="fas fa-circle"></i>사용자가 평가한 영화들의 별점 수를 보여주는 myPage구현</li>
                     <li><i class="fas fa-circle"></i>User App 관련 UnitTest 완료</li>
                 </ul>
             </article>
