index.html - project_article update

--- a/index.html
+++ b/index.html
@@ -91,7 +91,6 @@
                 <p>프로젝트 기간 2021.04.12 ~ 2021.05.06</p>
                 <h4>개발 상세</h4>
                 <ul>
-                    <h5>API 개발</h5>
                     <li><i class="fas fa-circle"></i>프로젝트와 로보어드바이저 서비스 이해 및 분석, 개발환경 세팅</li>
                     <li><i class="fas fa-circle"></i>기존 서비스 로직 분석 및 수정 요청사항 분석</li>
                     <li><i class="fas fa-circle"></i>추가 로직에 필요한 데이터베이스 추가 및 수정, 로보어드바이저 API 데이터 DB저장 로직 작성</li>
@@ -100,9 +99,9 @@
 
                 <ul>
                     <h5>What did I do</h5>
-                    <li><i class="fas fa-circle"></i>비전공자와의 협업</li>
-                    <li><i class="fas fa-circle"></i>포트폴리오 리스트 API 개발</li>
-                    <li><i class="fas fa-circle"></i>프로파일링 API 수정</li>
+                    <li><i class="fas fa-circle"></i>비전공자와의 협업 경험</li>
+                    <li><i class="fas fa-circle"></i>유저별 포트폴리오 리스트 API 개발</li>
+                    <li><i class="fas fa-circle"></i>프로파일링 API 항목 추가 및 수정</li>
                 </ul>
             </article>
 
