반응형을 위한 media.css 추가

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>InahChoi Resume</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" thpe="text/css" href="css/media.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 
@@ -70,8 +71,8 @@
         <section class="experience_section">
             <h2>Work Experience</h2>
             <p>[웹퍼블리셔] 구인터내셔널 / 온라인 지원부 / 2018.11 ~ 2021.01</p>
-            <p><i class="fas fa-circle"></i>자사 온라인몰 홈페이지 외주 개발자, 기획자분들과 함께 협업하며 유지보수</p>
-            <p><i class="fas fa-circle"></i>자사 온라인몰 홈페이지 디자인 및 퍼블리싱</p>
+            <p>자사 온라인몰 홈페이지 외주 개발자, 기획자분들과 함께 협업하며 유지보수</p>
+            <p>자사 온라인몰 홈페이지 디자인 및 퍼블리싱</p>
         </section>
 
         <section>
@@ -91,17 +92,17 @@
                 <p>프로젝트 기간 2021.04.12 ~ 2021.05.06</p>
                 <h4>개발 상세</h4>
                 <ul>
-                    <li><i class="fas fa-circle"></i>프로젝트와 로보어드바이저 서비스 이해 및 분석, 개발환경 세팅</li>
-                    <li><i class="fas fa-circle"></i>기존 서비스 로직 분석 및 수정 요청사항 분석</li>
-                    <li><i class="fas fa-circle"></i>추가 로직에 필요한 데이터베이스 추가 및 수정, 로보어드바이저 API 데이터 DB저장 로직 작성</li>
-                    <li><i class="fas fa-circle"></i>유저별 포트폴리오 리스트 구현, 프로파일링 항목 추가, AWS lambda를 통한 스케쥴러 작성</li>
+                    <li>프로젝트와 로보어드바이저 서비스 이해 및 분석, 개발환경 세팅</li>
+                    <li>기존 서비스 로직 분석 및 수정 요청사항 분석</li>
+                    <li>추가 로직에 필요한 데이터베이스 추가 및 수정, 로보어드바이저 API 데이터 DB저장 로직 작성</li>
+                    <li>유저별 포트폴리오 리스트 구현, 프로파일링 항목 추가, AWS lambda를 통한 스케쥴러 작성</li>
                 </ul>
 
                 <ul>
                     <h5>What did I do</h5>
-                    <li><i class="fas fa-circle"></i>비전공자와의 협업 경험</li>
-                    <li><i class="fas fa-circle"></i>유저별 포트폴리오 리스트 API 개발</li>
-                    <li><i class="fas fa-circle"></i>프로파일링 API 항목 추가 및 수정</li>
+                    <li>비전공자와의 협업 경험</li>
+                    <li>유저별 포트폴리오 리스트 API 개발</li>
+                    <li>프로파일링 API 항목 추가 및 수정</li>
                 </ul>
             </article>
 
@@ -111,13 +112,13 @@
                 <h4>개발 상세</h4>
                 <ul>
                     <h5>User API 개발</h5>
-                    <li><i class="fas fa-circle"></i>정규식 적용하여 회원가입, 로그인 API 로직 구현</li>
-                    <li><i class="fas fa-circle"></i>회원가입 시 해싱 라이브러리 bcrypt.gensalt()로 암호화하여 database에 저장</li>
-                    <li><i class="fas fa-circle"></i>회원가입, 로그인(인증), JWT - Json Web Token(인가) 구현</li>
-                    <li><i class="fas fa-circle"></i>사용자가 활동할 때 사용자를 확인(JWT)하는 데코레이터 기능 구현</li>
-                    <li><i class="fas fa-circle"></i>Kakao 공식 문서를 참고하여 로그인 API 로직 구현</li>
-                    <li><i class="fas fa-circle"></i>사용자가 평가한 영화들의 별점 수를 보여주는 myPage구현</li>
-                    <li><i class="fas fa-circle"></i>User App 관련 UnitTest 완료</li>
+                    <li>정규식 적용하여 회원가입, 로그인 API 로직 구현</li>
+                    <li>회원가입 시 해싱 라이브러리 bcrypt.gensalt()로 암호화하여 database에 저장</li>
+                    <li>회원가입, 로그인(인증), JWT - Json Web Token(인가) 구현</li>
+                    <li>사용자가 활동할 때 사용자를 확인(JWT)하는 데코레이터 기능 구현</li>
+                    <li>Kakao 공식 문서를 참고하여 로그인 API 로직 구현</li>
+                    <li>사용자가 평가한 영화들의 별점 수를 보여주는 myPage구현</li>
+                    <li>User App 관련 UnitTest 완료</li>
                 </ul>
             </article>
 
@@ -127,15 +128,15 @@
                 <h4>개발 상세</h4>
                 <ul>
                     <h5></i> Product API 개발</h5>
-                    <li><i class="fas fa-circle"></i>Product 조건별 필터링하여 데이터 전달</li>
-                    <li><i class="fas fa-circle"></i>필요한 Product의 요소별로 Product List 로직 구현</li>
-                    <li><i class="fas fa-circle"></i>코드 리뷰를 받고 List comprehension으로 코드 리팩토링</li>
-                    <li><i class="fas fa-circle"></i>상품 상세에 쓰이는 Product Detail 로직을 Path parameter로 RESTful하게 구현</li>
+                    <li>Product 조건별 필터링하여 데이터 전달</li>
+                    <li>필요한 Product의 요소별로 Product List 로직 구현</li>
+                    <li>코드 리뷰를 받고 List comprehension으로 코드 리팩토링</li>
+                    <li>상품 상세에 쓰이는 Product Detail 로직을 Path parameter로 RESTful하게 구현</li>
                 </ul>
 
                 <ul>
                     <h5>Data Excel Import/Export기능 개발</h5>
-                    <li><i class="fas fa-circle"></i>csv파일 생성하여 Python으로 MySQL에 데이터 추가</li>
+                    <li>csv파일 생성하여 Python으로 MySQL에 데이터 추가</li>
                 </ul>
             </article>
         </section>
