--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
                         <img src="images/mysql.png" alt="MySQL">
                     </div>
                     <div class="skill_string_div">
-                        <p>파이썬의 자료형과 조건문, 루프 등을 이해하고 프로젝트에 적용할 수 있습니다.</p>
-                        <p>장고의 MTV패턴을 이해하고 실제 프로젝트를 진행할 수 있습니다.</p>
-                        <p>MySQL의 쿼리문을 이해하고 적용할 수 있습니다.</p>
+                        <ul>
+                            <li>파이썬의 자료형과 조건문, 루프 등을 이해하고 프로젝트에 적용할 수 있습니다.</li>
+                            <li>장고의 MTV패턴을 이해하고 실제 프로젝트를 진행할 수 있습니다.</li>
+                            <li>MySQL의 쿼리문을 이해하고 적용할 수 있습니다.</li>
+                        </ul>
                     </div>
                 </article>
 
@@ -51,7 +53,9 @@
                         <img src="images/html5.png" alt="HTML5">
                         <img src="images/css3.png" alt="CSS3">
                     </div>
-                    <p>웹 퍼블리셔일 때에 사용했던 기술입니다.</p>                    
+                    <ul>
+                        <li>웹 퍼블리셔일 때에 사용했던 기술입니다.</li>
+                    </ul>              
                 </article>
 
                 <article class="skill_article">
@@ -62,7 +66,10 @@
                         <img src="images/trello.png" alt="Trello">
                         <img src="images/notion.png" alt="Notion">
                     </div>
-                    <p>AWS의 EC2, RDS를 통해 프로젝트를 배포한 경험이 있습니다.</p>
+                    <ul>
+                        <li>AWS의 EC2, RDS를 통해 프로젝트를 배포한 경험이 있습니다.</li>
+                        <li>여러 협업툴에 빠르게 적응할 수 있습니다.</li>
+                    </ul>
                 </article>
 
             </div>
@@ -71,8 +78,10 @@
         <section class="experience_section">
             <h2>Work Experience</h2>
             <p>[웹퍼블리셔] 구인터내셔널 / 온라인 지원부 / 2018.11 ~ 2021.01</p>
-            <p>자사 온라인몰 홈페이지 외주 개발자, 기획자분들과 함께 협업하며 유지보수</p>
-            <p>자사 온라인몰 홈페이지 디자인 및 퍼블리싱</p>
+            <ul>
+                <li>자사 온라인몰 홈페이지 외주 개발자, 기획자분들과 함께 협업하며 유지보수</li>
+                <li>자사 온라인몰 홈페이지 디자인 및 퍼블리싱</li>
+            </ul>
         </section>
 
         <section>
@@ -109,9 +118,9 @@
             <article class="project_article">
                 <h3>WatCha Project</h3>
                 <p>프로젝트 기간 2021.03.29 ~ 2021.04.09(2주)</p>
-                <h4>개발 상세</h4>
+                <h5>What did I do</h5>
+                <p>[User API 개발]</p>
                 <ul>
-                    <h5>User API 개발</h5>
                     <li>정규식 적용하여 회원가입, 로그인 API 로직 구현</li>
                     <li>회원가입 시 해싱 라이브러리 bcrypt.gensalt()로 암호화하여 database에 저장</li>
                     <li>회원가입, 로그인(인증), JWT - Json Web Token(인가) 구현</li>
@@ -125,9 +134,9 @@
             <article class="project_article">
                 <h3>Lush Project</h3>
                 <p>프로젝트 기간 2021.03.15 ~ 2021.03.26(2주)</p>
-                <h4>개발 상세</h4>
+                <h5>What did I do</h5>
+                <p>[Product API 개발]</p>
                 <ul>
-                    <h5></i> Product API 개발</h5>
                     <li>Product 조건별 필터링하여 데이터 전달</li>
                     <li>필요한 Product의 요소별로 Product List 로직 구현</li>
                     <li>코드 리뷰를 받고 List comprehension으로 코드 리팩토링</li>
