문구 수정 및 css 수정

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <section>
-            <h1>안녕하세요<br /> 저는 최인아입니다</h1>
+            <h1>안녕하세요<br /> 백엔드 개발자 최인아입니다</h1>
             <div class="paragraph">
                 <p>웹 퍼블리셔로 근무한 2년의 기간 동안 자연스럽게 개발 직군을 접하였습니다. <br/>
                 그로스 해킹을 공부하던 도중 사용자에게 다가가는 방법이 퍼블리셔와 백엔드 개발자가 다른 느낌이 들었고,
@@ -40,7 +40,7 @@
                     </div>
                     <div class="skill_string_div">
                         <ul>
-                            <li>파이썬의 자료형과 조건문, 루프 등을 이해하고 프로젝트에 적용할 수 있습니다.</li>
+                            <li>파이썬3.8의 자료형과 조건문, 루프 등을 이해하고 프로젝트에 적용할 수 있습니다.</li>
                             <li>장고의 MTV패턴을 이해하고 실제 프로젝트를 진행할 수 있습니다.</li>
                             <li>MySQL의 쿼리문을 이해하고 적용할 수 있습니다.</li>
                         </ul>
@@ -121,13 +121,13 @@
                 <h5>What did I do</h5>
                 <p>[User API 개발]</p>
                 <ul>
-                    <li>정규식 적용하여 회원가입, 로그인 API 로직 구현</li>
+                    <li>Email, Password 유효성 검사 정규표현식 적용하여 회원가입, 로그인 API 로직 구현</li>
                     <li>회원가입 시 해싱 라이브러리 bcrypt.gensalt()로 암호화하여 database에 저장</li>
                     <li>회원가입, 로그인(인증), JWT - Json Web Token(인가) 구현</li>
                     <li>사용자가 활동할 때 사용자를 확인(JWT)하는 데코레이터 기능 구현</li>
                     <li>Kakao 공식 문서를 참고하여 로그인 API 로직 구현</li>
                     <li>사용자가 평가한 영화들의 별점 수를 보여주는 myPage구현</li>
-                    <li>User App 관련 UnitTest 완료</li>
+                    <li>TDD 적용하여 User App 관련 UnitTest 완료</li>
                 </ul>
             </article>
 
@@ -137,10 +137,9 @@
                 <h5>What did I do</h5>
                 <p>[Product API 개발]</p>
                 <ul>
-                    <li>Product 조건별 필터링하여 데이터 전달</li>
+                    <li>sort하여 </li>
                     <li>필요한 Product의 요소별로 Product List 로직 구현</li>
-                    <li>코드 리뷰를 받고 List comprehension으로 코드 리팩토링</li>
-                    <li>상품 상세에 쓰이는 Product Detail 로직을 Path parameter로 RESTful하게 구현</li>
+                    <li>상품 상세에 쓰이는 Product Detail API Path parameter로 RESTful하게 구현</li>
                 </ul>
 
                 <ul>
