UPDATE : ARTICLE, Text, Css

--- a/index.html
+++ b/index.html
@@ -18,21 +18,26 @@
                 <p>웹 퍼블리셔로 근무한 2년의 기간 동안 자연스럽게 개발 직군을 접하였습니다. <br/>
                 그로스 해킹을 공부하던 도중 사용자에게 다가가는 방법이 퍼블리셔와 백엔드 개발자가 다른 느낌이 들었고,
                 사용자가 요청하는 데이터를 불러오고 처리하는
-                그 과정이 너무 매력적으로 다가오게 되어 위코드에서의 배움을 희망하게 되었습니다.
-                </p>
-                <p>저는 개발자들의 협업 문화를 사랑합니다. 또한 재미를 느낍니다.<br/>
-                    팀원과 함께 프로젝트를 성장시키고 배포하는 것에 희열을 느끼며,
-                    배포된 프로젝트가 비지니스 서비스로 이어지는 것에 감동합니다.
+                그 과정이 너무 매력적으로 다가오게 되어 백엔드 개발자로서 위코드에서의 배움을 희망하게 되었습니다.
                 </p>
             </div>
         </section>
 
         <section>
             <h2>Skills</h2>
-            <p>프로젝트 혹은 사용했던 기술들입니다.</p>
+
             <div class="flex_container">
                 <article class="skill_article">
-                    <h5>Main Stack</h5>
+                    <h3>Communication</h3>
+                        <ul>
+                            <li>파이썬3.8의 자료형과 조건문, 루프 등을 이해하고 프로젝트에 적용할 수 있습니다.</li>
+                            <li>장고의 MTV패턴을 이해하고 실제 프로젝트를 진행할 수 있습니다.</li>
+                            <li>MySQL의 쿼리문을 이해하고 적용할 수 있습니다.</li>
+                        </ul>
+                </article>
+
+                <article class="skill_article">
+                    <h3>Back-End<br/> & Database Stack</h3>
                     <div class="skill_img_div">
                         <img src="images/python.png" alt="Python">
                         <img src="images/django.png" alt="Django">
@@ -48,26 +53,26 @@
                 </article>
 
                 <article class="skill_article">
-                    <h5>Sub Stack</h5>
+                    <h3>Sub Stack</h3>
                     <div class="skill_img_div">
                         <img src="images/html5.png" alt="HTML5">
                         <img src="images/css3.png" alt="CSS3">
                     </div>
                     <ul>
-                        <li>웹 퍼블리셔일 때에 사용했던 기술입니다.</li>
+                        <li>시맨틱 마크업을 준수하기 위해 노력합니다.</li>
+                        <li>다양한 플랫폼 및 브라우저를 지원할 수 있습니다.</li>
                     </ul>              
                 </article>
 
                 <article class="skill_article">
-                    <h5>Devops</h5>
+                    <h3>DevOps & Tooling</h3>
                     <div class="skill_img_div">
                         <img src="images/aws.png" alt="AWS">
-                        <img src="images/slack.png" alt="Slack">
-                        <img src="images/trello.png" alt="Trello">
-                        <img src="images/notion.png" alt="Notion">
+                        <img src="images/github.png" alt="Notion">
                     </div>
                     <ul>
                         <li>AWS의 EC2, RDS를 통해 프로젝트를 배포한 경험이 있습니다.</li>
+                        <li>Git Flow를 이해하고 Git을 활용하여 협업할 수 있습니다.</li>
                         <li>여러 협업툴에 빠르게 적응할 수 있습니다.</li>
                     </ul>
                 </article>
@@ -76,22 +81,16 @@
         </section>
 
         <section class="experience_section">
-            <h2>Work Experience</h2>
-            <p>[웹퍼블리셔] 구인터내셔널 / 온라인 지원부 / 2018.11 ~ 2021.01</p>
-            <ul>
-                <li>자사 온라인몰 홈페이지 외주 개발자, 기획자분들과 함께 협업하며 유지보수</li>
-                <li>자사 온라인몰 홈페이지 디자인 및 퍼블리싱</li>
-            </ul>
-        </section>
+            <h2>Work Experiences</h2>
 
-        <section>
-            <h2>Projects</h2>
-                <p>프로젝트는 순수 개발시간의 비중을 높이기 위해 이미 서비스 중인 사이트의
-                기획이나 디자인을 클론하여 진행하였습니다.
-                Scrum의 진행과정을 이해하며 진행한 프로젝트들로,
-                로직과 구현은 직접 코딩했습니다.</p>
-                <p>진행했던 프로젝트들은 프로젝트 서비스 사용자 모집하여 추려진 피드백을 토대로 리팩토링을
-                진행하기로 하였습니다.</p>
+            <article class="project_article">
+                <h3>구인터내셔널[웹퍼블리셔]</h3>
+                <p>온라인 지원부 / 2018.11 ~ 2021.01</p>
+                <ul>
+                    <li>온라인몰 홈페이지 디자인 및 퍼블리싱을 담당하였습니다.</li>
+                    <li>개발직군 외 다른 직군에 계신 분들과 많은 협업을 경험했습니다.</li>
+                </ul>   
+            </article>
 
             <article class="project_article">
                 <h3>기업협업 [Dneuro]</h3>
@@ -99,52 +98,51 @@
                 기존 서비스 로직에서 고객 프로파일링 및 포트폴리오 API를 수정하고
                 유저별 포트폴리오 리스트를 보여주는 로직을 추가하였습니다.</p>
                 <p>프로젝트 기간 2021.04.12 ~ 2021.05.06</p>
-                <h4>개발 상세</h4>
+                <h4>What did I do</h4>
+                <p>[Portfolio API, Profiling API 개발]</p>
                 <ul>
-                    <li>프로젝트와 로보어드바이저 서비스 이해 및 분석, 개발환경 세팅</li>
-                    <li>기존 서비스 로직 분석 및 수정 요청사항 분석</li>
-                    <li>추가 로직에 필요한 데이터베이스 추가 및 수정, 로보어드바이저 API 데이터 DB저장 로직 작성</li>
-                    <li>유저별 포트폴리오 리스트 구현, 프로파일링 항목 추가, AWS lambda를 통한 스케쥴러 작성</li>
-                </ul>
-
-                <ul>
-                    <h5>What did I do</h5>
-                    <li>비전공자와의 협업 경험</li>
-                    <li>유저별 포트폴리오 리스트 API 개발</li>
-                    <li>프로파일링 API 항목 추가 및 수정</li>
+                    <li>AQueryTool(ERD) 사용하여 기존 테이블 수정 및 생성</li>
+                    <li>REST API를 통하여 서버 개발</li>
+                    <li>Profiling Algorism 함수를 Import하여 유저의 투자성향과 위험등급의 비교결과를 알려주는 API 개발</li>
+                    <li>유저가 채택한 Portfolio를 List로 보여주는 API 개발</li>
+                    <li>Portfolio_id를 URL Parameter로 넘겨 요청 된 Portfolio의 데이터 반환</li>
                 </ul>
             </article>
 
             <article class="project_article">
-                <h3>WatCha Project</h3>
+                <h3>WatChaPedia Project</h3>
+                <p>Back-end : 2명, Front-end : 3명으로 진행 된 프로젝트로,<br/>
+                영화 추천 서비스인 왓챠피디아를 모티브로 사이트를 구현했습니다.<br/>
+                프로젝트 기간 동안 PR을 기반으로 코드 리뷰를 받으며 진행했습니다.</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/65SivG9_epo?start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p>프로젝트 기간 2021.03.29 ~ 2021.04.09(2주)</p>
-                <h5>What did I do</h5>
+                <h4>What did I do</h4>
                 <p>[User API 개발]</p>
                 <ul>
-                    <li>Email, Password 유효성 검사 정규표현식 적용하여 회원가입, 로그인 API 로직 구현</li>
+                    <li>Email, Password 유효성 검사 정규표현식 적용하여 회원가입, 로그인 API 개발</li>
                     <li>회원가입 시 해싱 라이브러리 bcrypt.gensalt()로 암호화하여 database에 저장</li>
                     <li>회원가입, 로그인(인증), JWT - Json Web Token(인가) 구현</li>
                     <li>사용자가 활동할 때 사용자를 확인(JWT)하는 데코레이터 기능 구현</li>
-                    <li>Kakao 공식 문서를 참고하여 로그인 API 로직 구현</li>
-                    <li>사용자가 평가한 영화들의 별점 수를 보여주는 myPage구현</li>
-                    <li>TDD 적용하여 User App 관련 UnitTest 완료</li>
+                    <li>Kakao 공식 문서를 참고하여 로그인 API 개발</li>
+                    <li>사용자가 평가한 영화들의 별점 수를 보여주는 myPage API 개발</li>
+                    <li>TDD 적용하여 User App 관련 각 API UnitTest 완료</li>
                 </ul>
             </article>
 
             <article class="project_article">
                 <h3>Lush Project</h3>
+                <p>Back-end: 3명, Front-end : 3명으로 진행 된 프로젝트로,<br/>
+                영국의 스파 브랜드인 러쉬를 모티브로 사이트를 구현하였습니다.<br/>
+                프로젝트 기간 동안 PR을 기반으로 코드 리뷰를 받으며 진행했습니다.</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/5bo_7Ud_IBE?start=99" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p>프로젝트 기간 2021.03.15 ~ 2021.03.26(2주)</p>
-                <h5>What did I do</h5>
+                <h4>What did I do</h4>
                 <p>[Product API 개발]</p>
                 <ul>
-                    <li>sort하여 </li>
-                    <li>필요한 Product의 요소별로 Product List 로직 구현</li>
-                    <li>상품 상세에 쓰이는 Product Detail API Path parameter로 RESTful하게 구현</li>
-                </ul>
-
-                <ul>
-                    <h5>Data Excel Import/Export기능 개발</h5>
-                    <li>csv파일 생성하여 Python으로 MySQL에 데이터 추가</li>
+                    <li>Product별로 Product List API 개발</li>
+                    <li>Query Parameter를 사용하여 카테고리, 신제품, 가격별로 List 정렬</li>
+                    <li>상품 상세 정보를 보여주는 Product Detail API를 Path parameter로 RESTful하게 구현</li>
+                    <li>csv파일 생성하여 Python으로 DB에 데이터를 추가하는 Upload 개발</li>
                 </ul>
             </article>
         </section>
@@ -152,8 +150,8 @@
         <section>
             <article class="contact_article">
                 <h3>CONTACT</h3>
-                <p><span>PhoneNumber</span> 010.9402.6454</p>
-                <p><span>Email</span> choiinah@kakao.com</p>
+                <p>Phone : 010.9402.6454</p>
+                <p>Email : choiinah@kakao.com</p>
                 <div class="contact_flex">
                     <a href="https://github.com/InahChoi" target="_blank"><img src="images/github2.png" alt="github"></a>
                     <a href="https://velog.io/@inah-_-" title="velog 구경가기" target="_blank"><img src="images/velog.jpeg" alt="velog"></a>
